--- a/application/CohortManager/src/Web/package.json
+++ b/application/CohortManager/src/Web/package.json
@@ -22,7 +22,8 @@
     "next-auth": "5.0.0-beta.25",
     "nhsuk-frontend": "^10.0.0-internal.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
