--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@
 *.suo
 *.user
 
+*host.json
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 
@@ -114,4 +116,5 @@ application/CohortManager/src/Functions/*.json
 !**/playwright-tests/src/parquet/*.parquet
 # Explicitly include test JSON files
 !**/playwright-tests/src/tests/e2e/testFiles/**/*.json
+
 
