feat: Subscribe participants from ServiceNow to NEMS (#1466)
* feat: Subscribe participants from ServiceNow to NEMS

* test: Fixed failing tests

* refactor: Removed unnecessary property assignment

* refactor: Improved exception message

--- a/application/CohortManager/compose.core.yaml
+++ b/application/CohortManager/compose.core.yaml
@@ -123,6 +123,7 @@ services:
       - RetrievePdsDemographicURL=http://retrieve-pds-demographic:8082/api/RetrievePDSDemographic
       - SendServiceNowMessageURL=http://servicenow-message-handler:9092/api/servicenow/send
       - ParticipantManagementURL=http://participant-management-data-service:7994/api/ParticipantManagementDataService
+      - ManageNemsSubscriptionSubscribeURL=http://manage-nems-subscription:9081/api/ManageNemsSubscriptionSubscribeURL
       - CohortDistributionTopic=cohort-distribution-topic
 
   update-blocked-flag:
