--- a/application/CohortManager/src/Web/package.json
+++ b/application/CohortManager/src/Web/package.json
@@ -11,8 +11,7 @@
     "test:unit": "jest",
     "test:unit:watch": "jest --watch",
     "test:unit:coverage": "jest --coverage",
-    "test:e2e": "npx bddgen && npx playwright test --grep=\"@regression\"",
-    "test:e2e:epic_4a": "npx bddgen && npx playwright test --grep=\" @epic_4a\"",
+    "test:e2e": "npx bddgen && npx playwright test",
     "test:e2e:ui": "playwright test --ui",
     "lint": "next lint"
   },
