--- a/.github/workflows/ci-ui-tests.yaml
+++ b/.github/workflows/ci-ui-tests.yaml
@@ -28,33 +28,20 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Playwright browsers
+      - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      - name: Start application and run tests
+      - name: Run Playwright tests
         env:
           AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
           SERVICE_NAME: ${{ vars.SERVICE_NAME }}
           NEXTAUTH_URL: ${{ vars.NEXTAUTH_URL }}
           EXCEPTIONS_API_URL: ${{ vars.EXCEPTIONS_API_URL }}
           COHORT_MANAGER_RBAC_CODE: ${{ vars.COHORT_MANAGER_USERS }}
-        run: |
-          # Start the app in background
-          npm run dev:secure &
-
-          # Wait for the app to be ready
-          while ! curl -s https://localhost:3000 > /dev/null; do
-            echo "Waiting for app to start..."
-            sleep 5
-          done
-      - name: Run UI tests
-        run: |
-          npm run test:e2e
-
-      - name: Upload test results
+        run: npx playwright test
+      - uses: actions/upload-artifact@v4
         if: always()
-        uses: actions/upload-artifact@v4
         with:
-          name: test-results
-          path: application/CohortManager/src/Web/test-results/
+          name: playwright-report
+          path: playwright-report/
           retention-days: 30
