--- a/application/CohortManager/src/Web/package.json
+++ b/application/CohortManager/src/Web/package.json
@@ -12,7 +12,7 @@
     "test:unit:watch": "jest --watch",
     "test:unit:coverage": "jest --coverage",
     "test:e2e": "npx bddgen && npx playwright test",
-    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:ui": "npx bddgen && npx playwright test --ui",
     "lint": "next lint"
   },
   "dependencies": {
