--- a/.github/workflows/ci-ui-tests.yaml
+++ b/.github/workflows/ci-ui-tests.yaml
@@ -31,14 +31,14 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      - name: Run Playwright tests
+      - name: Run BDD tests
         env:
           AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
           SERVICE_NAME: ${{ vars.SERVICE_NAME }}
           NEXTAUTH_URL: ${{ vars.NEXTAUTH_URL }}
           EXCEPTIONS_API_URL: ${{ vars.EXCEPTIONS_API_URL }}
           COHORT_MANAGER_RBAC_CODE: ${{ vars.COHORT_MANAGER_USERS }}
-        run: npx playwright test
+        run: npm run test:e2e
       - uses: actions/upload-artifact@v4
         if: always()
         with:
