--- a/application/CohortManager/compose.core.yaml
+++ b/application/CohortManager/compose.core.yaml
@@ -289,6 +289,7 @@ services:
         - NemsDefaultEventTypes0=pds-record-change-1
         - NemsBypassServerCertificateValidation=true
         - DtOsDatabaseConnectionString=Server=db,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+        - IsStubbed=true
       ports:
         - "9081:9081"
 
