service connection test

--- a/.azuredevops/pipelines/adhoc-post-deployment-tests-dev.yaml
+++ b/.azuredevops/pipelines/adhoc-post-deployment-tests-dev.yaml
@@ -39,7 +39,7 @@ stages:
         steps:
           - template: .azuredevops/templates/steps/run-post-deployment-pw-tests.yaml@dtos-devops-templates
             parameters:
-              serviceConnection: sc-cohort-manager-dev
+              serviceConnection: NHSDigital
               testProjectDirectory: "tests/playwright-tests"
               testfileDirectory: "src/tests/e2e/testFiles"
               testProjectName: "tests"
