--- a/.github/workflows/stage-4-deploy.yaml
+++ b/.github/workflows/stage-4-deploy.yaml
@@ -86,4 +86,6 @@ jobs:
             --parameters $parameters \
             --output tsv --query id)
 
-          scripts/bash/wait_ado_pipeline.sh "$RUN_ID" https://dev.azure.com/nhse-dtos "${project_name}" 900
+          echo "Click here to view the ADO pipeline: ${organisation}/nhse-dtos/${project_name}/_build/results?buildId=${RUN_ID}"
+
+          scripts/bash/wait_ado_pipeline.sh "$RUN_ID" https://dev.azure.com/nhse-dtos "${project_name}" 1800
