--- a/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
+++ b/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
@@ -29,7 +29,7 @@
         "LocalParams": [
           {
             "Name": "AcceptedCurrentPosting",
-            "Expression": "dbLookup.RetrievePostingCategory(newParticipant.CurrentPosting) != null && ((dbLookup.RetrievePostingCategory(newParticipant.CurrentPosting) == \"ENGLAND\" || dbLookup.RetrievePostingCategory(newParticipant.CurrentPosting) == \"ENG\" || dbLookup.RetrievePostingCategory(newParticipant.CurrentPosting) == \"IM\" || dbLookup.RetrievePostingCategory(newParticipant.CurrentPosting) == \"DMS\"))"
+            "Expression": "newParticipant.CurrentPosting != null && dbLookup.ValidatePostingCategories(newParticipant.CurrentPosting)"
           },
           {
             "Name": "IsExcluded",
