--- a/application/CohortManager/src/Functions/ParticipantManagementServices/ManageParticipant/Dockerfile
+++ b/application/CohortManager/src/Functions/ParticipantManagementServices/ManageParticipant/Dockerfile
@@ -1,3 +1,4 @@
+ARG PLATFORM_SUFFIX
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS base
 
 COPY ./Shared /Shared
@@ -18,8 +19,8 @@ WORKDIR /src/dotnet-function-app
 RUN dotnet restore
 RUN dotnet publish *.csproj --output /home/site/wwwroot --no-restore
 # To enable ssh & remote debugging on app service change the base image to the one below
-# FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0-appservice
-FROM --platform=linux/amd64 mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0
+# FROM ${PLATFORM_SUFFIX}mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0-appservice
+FROM ${PLATFORM_SUFFIX}mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated8.0
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
     AzureFunctionsJobHost__Logging__Console__IsEnabled=true
 
