No longer retag images

--- a/.azuredevops/pipelines/cd-infrastructure-sandbox-core.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-sandbox-core.yaml
@@ -24,7 +24,7 @@ parameters:
     # PreProd pipeline which needs to retag images to move them from the Dev ACR to the Prod ACR
     displayName: 'Re-tag Images'
     type: boolean
-    default: true
+    default: false
 
   - name: dockerImageReTagFrom
     # Only required until commit hashes are passed in by calling pipeline
