--- a/.azuredevops/pipelines/cd-infrastructure-sandbox-core.yaml
+++ b/.azuredevops/pipelines/cd-infrastructure-sandbox-core.yaml
@@ -92,15 +92,7 @@ stages:
 - ${{ each testType in parameters.testTypes }}:
     - stage: ${{ testType }}_stage
       displayName: Run ${{ testType }} Tests
-      ${{ if eq(testType, 'regression_api') }}:
-        dependsOn: smoke_e2e_stage
-      ${{ if eq(testType, 'regression_e2e_epic1') }}:
-        dependsOn: regression_api_stage
-      ${{ if eq(testType, 'regression_e2e_epic2') }}:
-        dependsOn: regression_e2e_epic1_stage
-      ${{ if eq(testType, 'regression_e2e_epic3') }}:
-        dependsOn: regression_e2e_epic2_stage
-      condition: succeededOrFailed()
+      condition: always()
       jobs:
         - job: ${{ testType }}_job
           pool:
